[build-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "mcom03-flash-tools"
description = "Tools for flashing on-board memories on MCom-03 based boards"
dynamic = ["version"]
readme = "README.rst"
requires-python = ">=3.9"
dependencies = [
    "pyserial>=3.0,<4.0",
    "tomli==2.0.1; python_version < '3.11'",
]

[project.scripts]
mcom03-flash = "mcom03_flash_tools.mcom03_flash:main"
mcom03-eeprom = "mcom03_flash_tools.mcom03_eeprom:main"
mcom03-otp = "mcom03_flash_tools.mcom03_otp:main"

[tool.setuptools]
packages = ["mcom03_flash_tools"]

[tool.setuptools_scm]
# empty section is required by setuptools scm

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "B", # bugbear
  "E4", "E7", "E9", # pycodestyle
  "I", # isort
  "F", # flake8
  "PLE", # pylint errors
  "PLW", # pylint warnings
]
unfixable = ["ALL"]
fixable = ["E", "I", "F"]
ignore = ["PLW0133"]
